examples/test/testpolicy17619.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17619
  namespace: namespace382
spec:
  podSelector:
    matchLabels:
      key19: value42
      key33: value49
      key39: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value3
      podSelector:
        matchLabels:
          key44: value9
          key40: value21
          key21: value49
